# AddeMongo

./: README.md  pyproject.toml
addemongo/src/controller/database/: mongo_connection.py
tests/src/controller/database/: test_mongo_connection.py
